--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -48,4 +48,200 @@
 
 /* ------ START WRITING YOUR CODE BELOW ------ */
 
+/* IMPORTED FONTS */
 
+@font-face {
+    font-family: "ultra";
+    src: url('../fonts/serif/ultra-regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'roboto';
+    src: url('../fonts/sans-serif/roboto-regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'lato';
+    src: url('../fonts/sans-serif/lato-regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* TYPOGRAPHY*/
+
+p {
+    font-family: roboto, arial, sans-serif;
+    
+}
+
+h1, h3, h4 {
+    font-family: lato, Helvetica, sans-serif;
+    letter-spacing: 0.0325rem;
+    padding-top: 2rem;
+}
+h2 {
+    font-family: lato, Helvetica, sans-serif;
+    letter-spacing: 0.0325rem;
+    padding-top: 2rem;
+}
+h3 {
+    font-family: lato, Helvetica, sans-serif;
+    letter-spacing: 0.0325rem;
+    padding-top: 0.4rem;
+}
+
+h1 {
+    font-size: 3rem;
+    letter-spacing: 0.25rem;
+    transform: rotate(-5deg);
+    text-align: center;
+}
+
+.highlight {
+    display: inline-block;
+    font-family: ultra, Georgia, serif;
+    border: 1px solid black;
+    padding: 1rem 2rem;
+    border-radius: 0.3rem;
+    border-top-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    color: #faf2e4;
+    background-color: #373355;
+    box-shadow: 5px 5px 4px -1px #888;
+}
+
+time {
+    font-size: .75rem;
+}
+
+/* GENERAL SETUP AND DEFAULTS*/
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    font-size:16px;
+}
+
+body {
+    margin: 1.5rem auto;
+    width:90%;
+    min-width:56.25rem;
+}
+
+/* LAYOUT */
+
+header {
+    padding: 1rem;
+    
+}
+
+nav {
+    margin-top: 3rem;
+}
+.main-section {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    grid-gap: 1rem;
+}
+
+article {
+    grid-column: 1 / 2;
+    grid-row: 1;
+    
+}
+
+aside {
+    grid-column: 2 / 3;
+    grid-row: 1;
+    border-left: 1px solid #28234b;
+    padding-left: 0.75rem;
+}
+
+aside p {
+    border-bottom: 1px solid #28234b;
+    padding-bottom: 0.5rem;
+}
+
+.subsection {
+    display: flex;
+}
+
+button {
+    display: inline-block;
+    font-family: ultra, Georgia, serif;
+    border: 1px solid black;
+    padding: 0.5rem 1rem;
+    border-radius: 0.3rem;
+    border-top-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+    color: #faf2e4;
+    background-color: #373355;
+    box-shadow: 5px 5px 4px -1px #888;
+}
+
+a {
+    font-size: 0.25rem;
+}
+
+/* IMAGES AND FIGURES */
+
+img {
+    width: 100%;
+}
+
+figure {
+    margin: 0px;
+}
+
+.article-image {
+    width: 33%;
+    float: left;
+    margin-right: 1rem;
+}
+.subsection {
+    margin: 1rem 0rem;
+}
+.subsection figure {
+    margin: 0rem 0.25rem;
+    background-color: #F2E4C9;
+}
+
+.subsection figure figcaption {
+    padding: 0.5rem 0.5rem;
+}
+
+/* LINKS AND NAVIGATION */
+
+
+nav a {
+    display: inline-block;
+    padding: 1.25rem 2rem;
+    font-size: 1.5rem;
+    font-family: lato, arial, sans-serif;
+    color: #28234b;
+}
+
+a:link {
+    color: #050147; 
+}
+a:visited {
+    color: #021ebd;
+}
+a:hover {
+    color: #7980c2;
+    text-decoration: underline;
+}
+a:active {
+    color: #0000FF;
+}
+
+nav {
+    border-top: 1px solid #28234b;
+    border-bottom: 1px solid #28234b;
+}
